# shalloc-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: test.rs
src/: lib.rs
